--- a/index1.html
+++ b/index1.html
@@ -1,1 +1,25 @@
-hello
+<!doctype html> 
+<html> 
+<head> 
+<meta charset="utf-8"> 
+<title>Моя личная страничка</title> 
+</head> 
+<body> 
+<left><h1>Глушкова Мария</h1></left> 
+<left><img alt="Это я" width="15%" src="me.jpg"></left> 
+<br/> 
+<h2><p>Студентка 1 курса бакалавриата Факультета гуманитраных наук НИУ ВШЭ. 
+</br> 
+Я люблю фото Колчака, маракасы, вид задумчивой Лизы Черкасовой, ее полосатые носки и наши здоровые отношения. 
+</p> 
+</h2>
+<h3>Контакты:</h3> 
+Страничка <a href=https://vk.com/rosemary_volden>vkontakte</a> 
+<br/> 
+<a href=https://github.com/maglushkova>GitHub</a> 
+<br/> 
+Телефон: <b>+79778796681</b> 
+<br/> 
+E-mail: <i>maglushkova@edu.hse.ru</i> 
+</body> 
+</html>
