--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html> 
 <head> 
 <meta charset="utf-8"> 
-<title>Моя личная страничка</title> 
+<title>My personal page.</title> 
 </head> 
 <body> 
-<left><h1>Глушкова Мария</h1></left> 
-<left><img alt="Это я" width="15%" src="me.jpg"></left> 
+<left><h1>Glushkova Maria</h1></left> 
+<left><img alt="It's me" width="15%" src="me.jpg"></left> 
 <br/> 
-<h2><p>Студентка 1 курса бакалавриата Факультета гуманитраных наук НИУ ВШЭ. 
+<h2><p>I'm a student of the Higher School of Economics.
 </br> 
-Я люблю фото Колчака, маракасы, вид задумчивой Лизы Черкасовой, ее полосатые носки и наши здоровые отношения. 
+I love Kolchack's photos and Liza's striped socks. 
 </p> 
 </h2>
-<h3>Контакты:</h3> 
-Страничка <a href=https://vk.com/rosemary_volden>vkontakte</a> 
+<h3>Contacts:</h3> 
+Page <a href=https://vk.com/rosemary_volden>vkontakte</a> 
 <br/> 
 <a href=https://github.com/maglushkova>GitHub</a> 
 <br/> 
-Телефон: <b>+79778796681</b> 
+Phone: <b>+79778796681</b> 
 <br/> 
 E-mail: <i>maglushkova@edu.hse.ru</i> 
 </body> 
