--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head> 
 <body> 
 <left><h1>Glushkova Maria</h1></left> 
-<left><img alt="It's me" width="15%" src="me.jpg"></left> 
+<left><img alt="It's me" width="15%" src="masha.jpg"></left> 
 <br/> 
 <h2><p>I'm a student of the Higher School of Economics.
 </br> 
