--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html> 
 <head> 
 <meta charset="utf-8"> 
+<style>
+  body { background: #FFE4C4 }
 <title>My personal page.</title> 
 </head> 
 <body> 
@@ -21,5 +23,6 @@ Page <a href=https://vk.com/rosemary_volden>vkontakte</a>
 Phone: <b>+79778796681</b> 
 <br/> 
 E-mail: <i>maglushkova@edu.hse.ru</i> 
+</style>
 </body> 
 </html>
