--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html> 
 <head> 
 <meta charset="utf-8"> 
-<style>
-  body { background: #FFE4C4 }
+  <body bgcolor=#FFE4C4> 
 <title>My personal page.</title> 
 </head> 
 <body> 
@@ -23,6 +22,6 @@ Page <a href=https://vk.com/rosemary_volden>vkontakte</a>
 Phone: <b>+79778796681</b> 
 <br/> 
 E-mail: <i>maglushkova@edu.hse.ru</i> 
-</style>
+</body>
 </body> 
 </html>
