--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <br/> 
 <h2><p>I'm a student of the Higher School of Economics.
 </br> 
-I love Kolchack's photos and Liza's striped socks. 
+I like Kolchak's photos, the way Lisa Cherkasova looks when she's thoughtful, her striped socks and our healthy relationships 
 </p> 
 </h2>
 <h3>Contacts:</h3> 
